--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -1,25 +1,36 @@
 <div class="container-fluid">
-<div class="text-center"> 
-	<!-- INSERT ADD HERE -->
-	<script ></script>
-	<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px">
-    </ins>
+
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- 728*90 -->
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:728px;height:90px"
+           data-ad-client="ca-pub-4211720830189288"
+           data-ad-slot="9899296254"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+
+
+
+
+<div class="row">
+	
+<div class="col-sm-3 text-center">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- 300*600 -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:300px;height:600px"
+         data-ad-client="ca-pub-4211720830189288"
+         data-ad-slot="8422563053"></ins>
     <script>
-    	(adsbygoogle = window.adsbygoogle || []).push({});
+    (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
 </div>
 
-<div class="row">
-	<div class="col-md-3 text-center">
-			<script ></script>
-			<ins class="adsbygoogle" style="display:inline-block;width:100px;height:500px">
-		    </ins>
-		    <script>
-		    	(adsbygoogle = window.adsbygoogle || []).push({});
-		    </script>
-	</div>
 	<div class="col-md-6">
 
+      
+<br>
 	<div class="panel panel-info">
       <!-- <div class="panel-heading"><a href="/ecet/cse">Computer Science</a><br></div> -->
       <div class="panel-body">
@@ -40,15 +51,19 @@
       </div>
     </div>
 
-    <div class="text-center"> 
 	<!-- INSERT ADD HERE -->
-			<script ></script>
-			<ins class="adsbygoogle" style="display:inline-block;width:600px;height:90px">
-		    </ins>
-		    <script>
-		    	(adsbygoogle = window.adsbygoogle || []).push({});
-		    </script>
-	</div><br>
+			
+<!-- fit -->
+<ins class="adsbygoogle adslot_1"
+     style="display:block"
+     data-ad-client="ca-pub-4211720830189288"
+     data-ad-slot="5329495850"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 
     <div class="panel panel-info">
       <!-- <div class="panel-heading"><a href="/ecet/eee">Electrical & Electronics</a><br></div> -->
@@ -68,8 +83,7 @@
       		<div class="col-md-6 text-center"><a href="/ecet/mechanical">Exam List</a></div>
       </div>
       </div>
-
-      </div>
+    </div>
     
 
      <div class="panel panel-info">
@@ -81,31 +95,20 @@
       </div>
       </div>
     </div>
+   </div>
+
+   <div class="col-sm-3" style="margin:0px!important; padding: 0px!important;">
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 300*600 -->
+      <ins class="adsbygoogle"
+           style="display:inline-block;width:300px;height:600px"
+           data-ad-client="ca-pub-4211720830189288"
+           data-ad-slot="8422563053"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </div>
 
-
-<!-- <div class="panel-body">
-      <div clsaa="row">
-      		<div class="col-md-6">Mathematics Questions<br>Physics Questions<br>Chemistry Questions<br>Civil Questions</div>
-      		<div class="col-md-6 text-center"><br><a href="/ecet/civil">Start Exam</a></div>
-    </div>
-    </div></div> -->
-<!-- Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering -->
-		<!-- <a href="/ecet/cse">Computer Science Engineering </a><br>
-		<a href="/ecet/ece">ECE</a><br>
-		<a href="/ecet/eee">EEE</a><br>
-		<a href="/ecet/mechanical">MECHANICAL</a><br>
-		<a href="/ecet/civil">CIVIL</a><br>
-		</div> -->
-
-<div class="col-md-3 text-center">
-	<script ></script>
-			<ins class="adsbygoogle" style="display:inline-block;width:100px;height:500px">
-		    </ins>
-		    <script>
-		    	(adsbygoogle = window.adsbygoogle || []).push({});
-		    </script>
-</div>
 
 </div>
 </div>
