--- a/app/views/exam/ecetresults.html.erb
+++ b/app/views/exam/ecetresults.html.erb
@@ -34,7 +34,7 @@
 				<% if i == ad %>
 				<% ad+=ad2 %>
 				<tr class="text-center">
-				<td colspan="3"
+				<td colspan="3">
 					 <script ></script>
                             <ins class="adsbygoogle"
                                  style="display:inline-block;width:728px;height:90px"
