--- a/app/views/ecet/ecetform.html.erb
+++ b/app/views/ecet/ecetform.html.erb
@@ -6,7 +6,7 @@
   <div class="content">
    <div class="container">
     <!-- Page-Title -->
-    <div class="row1">
+    <div class="row">
       <div class="col-sm-12">
         <h4 class="page-title">Add Ecet Questions</h4>
         <ol class="breadcrumb">
@@ -36,61 +36,61 @@
   <% @cets = Cet.all%>
  
 
-  <%= simple_form_for @ecet, url: {:action => "addecet",  :method => "post"} do |f| %>
-<!--   <%= f.collection_select :subject, @subjects.all, :id, {prompt: "Select an Subject"}, {class: "form-control", :style=>'width:100%', :required => true} %><br><br> -->
-<div class="row">
-<div class="col-sm-8">
-<div class="col-sm-6">
-<!-- 
-<%= f.collection_select :cet, @cets.all, :id, :name, {:prompt => "Select Cet"},{class: "form-control", :style=>'width:100%', :required => true} %>
- -->
- <%= f.hidden_field :cet, :value => "ecet" %><h4> <b>ECET</b></h4></div>
-<div class="col-sm-6">
-   <%= f.input :subject, :required => true, :collection => ['Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering'], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"}, :prompt => "Select Subject" %><br>
-</div>
-</div>
-</div>
-<!--  <%= f.input :subject, :required => true, :placeholder => "subject", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %> -->
-  <%= f.input :question, :required => true, :placeholder => "Add Question", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %><br>
+                      <%= simple_form_for @ecet, url: {:action => "addecet",  :method => "post"} do |f| %>
+                    
+                    <div class="row">
+                    <div class="col-sm-8">
+                      <div class="col-sm-4">
+                          <%= f.hidden_field :cet, :value => "ecet" %><h4> <b>ECET</b></h4>
+                       </div>
+                    <div class="col-sm-4">
+                       <%= f.input :subject, :required => true, :collection => ['Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering'], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"}, :prompt => "Select Subject" %><br>
+                    </div>
+                    </div>
+                    </div>
+                   
+                      <%= f.input :question, :required => true, :placeholder => "Add Question", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %><br>
 
-  <div class="row">
-  <!-- <div class="col-sm-8"> -->
-  <div class="col-sm-4">
-  <%= f.input :a, :required => true, :placeholder => "option A", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-  <%= f.input :b, :required => true, :placeholder => "option B", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-    </div>
-    <div class="col-sm-4">
-  <%= f.input :c, :required => true, :placeholder => "option C", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-  <%= f.input :d, :required => true, :placeholder => "option D", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-  </div>
-    <div class="col-sm-4">
-  <%= f.input :t, :placeholder => "True Answer", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-   <%= f.input :tc, :placeholder => "Test Count", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-   </div>
-<!-- </div> -->
- 
-</div>
+                      <div class="row">
+                      <!-- <div class="col-sm-8"> -->
+                      <div class="col-sm-4">
+                      <%= f.input :a, :required => true, :placeholder => "option A", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                      <%= f.input :b, :required => true, :placeholder => "option B", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                        </div>
+                        <div class="col-sm-4">
+                      <%= f.input :c, :required => true, :placeholder => "option C", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                      <%= f.input :d, :required => true, :placeholder => "option D", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                      </div>
+                        <div class="col-sm-4">
+                      <%= f.input :t, :placeholder => "True Answer", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                       <%= f.input :tc, :placeholder => "Test Count", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                       </div>
+                    </div>
 
-<div class="text-center">
- <%= f.submit "submit", :class => "btn btn-primary" %>
- </div>
-  <% end %>
+                    <div class="text-center">
+                     <%= f.submit "submit", :class => "btn btn-primary" %>
+                     </div>
+                      <% end %>
+  </div><br>
 
-  <div class="container">
+            <div class="container">
 
-    <%= simple_form_for @ecetcompleted, url: {:action => "ecetcompleted",  :method => "post"} do |f| %>
-    <%= f.hidden_field :cet, :value => "ecet" %>
-     <div class="col-sm-8">
-     <div class="col-sm-4">
-   <%= f.input :subject, :required => true, :collection => ['Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering'], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"}, :prompt => "Select Subject" %><br>
-   
-   <%= f.input :tc, :placeholder => "Test Count", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-   <div class="text-center">
- <%= f.submit "submit", :class => "btn btn-primary" %>
- </div>
-  <% end %>
-      
-  </div>
+                    <%= simple_form_for @ecetcompleted, url: {:action => "ecetcompleted",  :method => "post"} do |f| %>
+                    <%= f.hidden_field :cet, :value => "ecet" %>
+                     
+                     <div class="col-sm-4">
+                         <%= f.input :subject, :required => true, :collection => ['Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering'], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"}, :prompt => "Select Subject" %><br>
+                      </div>
+                   <div class="col-sm-4">
+                        <%= f.input :tc, :placeholder => "Test Count", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
+                   </div>
+                   
+                 <!--   <div class="col-sm-4"></div> -->
+                   <div class="text-left">
+                       <%= f.submit "submit", :class => "btn btn-primary" %>
+                 </div>
+                  <% end %>
+          </div>
 <br>
 <table class="table table-hover">
   <tr>
@@ -217,9 +217,8 @@
 
    
   
+</div>
 
-
-    
 </div>
 </div>
 </div>
