--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -1,8 +1,36 @@
-<div class="container">
-<div style="width:90%; height: 200px"><img src="/images/googleadwordslogo.jpg" width="90%" height="160px" ></div>
+<style type="text/css">
+	.rightdiv {
+   position: absolute;
+   left: 100%;
+   top: 0;
+}
+</style>
+<div class="container-fluid">
+
 <% i = 1 %>
+<div class="container">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 728*90 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4211720830189288"
+     data-ad-slot="9899296254"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <div class="row">
-<div class="col-sm-3"></div>
+<div class="col-sm-3">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 300*600 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-4211720830189288"
+     data-ad-slot="8422563053"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <div class="col-sm-6">
 <% if @comptest.empty? %>
 	<div class="alert alert-danger">
@@ -32,7 +60,7 @@
 			<% if i == ad %>
 				<% ad+=ad2 %>
 				<tr class="text-center">
-				<td colspan="3"
+				<td colspan="3">
 					 <script ></script>
                             <ins class="adsbygoogle"
                                  style="display:inline-block;width:728px;height:90px"
@@ -49,6 +77,17 @@
 	<% end %>
 		</table>
 <% end %>
+<div class="col-sm-3 rightdiv"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 300*600 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-4211720830189288"
+     data-ad-slot="8422563053"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
+
+
 </div>
 </div>
 </div>
