--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -6,32 +6,42 @@
 }
 </style>
 <div class="container-fluid">
-
+<div class="row">
 <% i = 1 %>
-<div class="container">
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 728*90 -->
+<div class="col-sm-2"></div>
+<div class="col-sm-8 text-center">
+	
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- school9edu_main_Blog1_1x1_as -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-4211720830189288"
-     data-ad-slot="9899296254"></ins>
+     style="display:block"
+     data-ad-client="ca-pub-7665698555914778"
+     data-ad-slot="9074553645"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
 </div>
+<div class="col-sm-2"></div>
+</div>
+<br><br>
+
 <div class="row">
 <div class="col-sm-3">
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 300*600 -->
+<!-- school9edu_main_Blog1_1x1_as -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
-     data-ad-client="ca-pub-4211720830189288"
-     data-ad-slot="8422563053"></ins>
+     style="display:block"
+     data-ad-client="ca-pub-7665698555914778"
+     data-ad-slot="9074553645"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
 </div>
-<div class="col-sm-6">
+<div class="col-sm-8">
 <% if @comptest.empty? %>
 	<div class="alert alert-danger">
       <strong>No Tests Added Yet</strong>
@@ -45,8 +55,8 @@
 				<th class="success"></th>
 			</tr>
 			<!-- <% j = 1 %> -->
-			<% ad=@comptest.count/4 %>
-			<% ad2=@comptest.count/4 %>
+			<% ad=@comptest.count/2 %>
+			<% ad2=@comptest.count/2 %>
 			<% count = @comptest.count %>
 
 
@@ -58,16 +68,20 @@
 			
 			</tr>
 			<% if i == ad %>
-				<% ad+=ad2 %>
+				
 				<tr class="text-center">
 				<td colspan="3">
-					 <script ></script>
-                            <ins class="adsbygoogle"
-                                 style="display:inline-block;width:728px;height:90px"
-                                 </ins>
-                            <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
+					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Responsive Links -->
+					<ins class="adsbygoogle"
+					     style="display:block"
+					     data-ad-client="ca-pub-7665698555914778"
+					     data-ad-slot="8409268847"
+					     data-ad-format="link"></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+
                    </td> 
                    
                 </tr>
@@ -77,17 +91,22 @@
 	<% end %>
 		</table>
 <% end %>
-<div class="col-sm-3 rightdiv"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 300*600 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
-     data-ad-client="ca-pub-4211720830189288"
-     data-ad-slot="8422563053"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script></div>
 
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- school9edu_main_Blog1_1x1_as -->
+			<ins class="adsbygoogle"
+			     style="display:block"
+			     data-ad-client="ca-pub-7665698555914778"
+			     data-ad-slot="9074553645"
+			     data-ad-format="auto"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
 
+<div class="col-sm-1 rightdiv">
+
+</div>
+</div>
 </div>
 </div>
 </div>
