--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,42 +1,80 @@
-  
+  <div class="container">
   <!-- <div class="row content"> -->
-  <% if notice && (notice == "Signed in successfully." || notice == "Alert! You need to sign in or sign up before continuing") %>
-        <div class="alert alert-success alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= notice %>
-        </div>
-        <% end %>
-        <% if alert %>
-        <div class="alert alert-warning alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= alert %>
-        </div>
-        <% end %>
-    <div class="col-sm-2 sidenav">
-    <!--  -->
-    </div>
-    <div class="col-sm-8 text-left"> 
-    <a href="/ecetsubjects">Add Ecet Question </a>
-    <a href="/eamcetform">Add Eamcet Question </a>
-      <%= link_to "Exam-1", "/exam/1" %>
-      <%= link_to "Exam-2", "/exam/2" %>
-      <hr>
+        <% if notice %>
+              <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <%= notice %>
+              </div>
+              <% end %>
+              <% if alert %>
+              <div class="alert alert-warning alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <%= alert %>
+              </div>
+              <% end %>
 
-      <div class="sidenav">
-     <div class="well" style=" padding: 0 !important;">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  
+    <div class="row text-center">
+              <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- school9edu_main_Blog1_1x1_as -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7665698555914778"
+                 data-ad-slot="9074553645"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
     </div>
-    </div>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
-    </div>
-    <div class="col-sm-2 sidenav">
-      <div class="well" style=" padding: 0 !important;">
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+    <div class="row"> 
+      <div class="col-md-2">
+            <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- school9edu_main_Blog1_1x1_as -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7665698555914778"
+                 data-ad-slot="9074553645"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
       </div>
-     <!--  <div class="well">
-        <p>ADS</p>
-      </div> -->
-    </div>
-  <!-- </div> -->
 
+      <div class="col-md-8 text-justify">
+
+          <p> Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P. </p>
+
+            <p>Telangana State Engineering Common Entrance Test TSECET- 2017 will be conducted through computer based Test by JNTUH, Hyderabad on behalf of Telangana State Council of Higher Education (TSCHE). TSECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in T.S. </p>
+
+
+  
+     <a href="/ecetsubjects"><button class="btn btn-success">Ecet Exam </button> </a>
+  
+    
+         <div class="footer-bottom">
+            <p>SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.........) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).
+            
+            Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.
+
+            Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…….Do hard work, Practice and get Success.
+
+              *********SBTET WORLD WISHING YOU ALL THE BEST********</p>
+        </div>
+
+     <div class="col-md-2">
+       <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- school9edu_main_Blog1_1x1_as -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7665698555914778"
+                 data-ad-slot="9074553645"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+     </div>
+
+     </div>
+  <!-- </div> -->
+</div>
