--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,13 @@
   <style>
 
-    /*#mouseover{*/
+    #mouseover{
     a:hover {
         background-color: lightblue!important;
         /*border-radius: 20px;*/
     }
-  /*}*/
+  }    
+    ins.adsbygoogle { background: transparent !important; }
+    
 </style>
 
 
