--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
 <div class="container">
 
-<h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   
+  <% if devise_error_messages! %>
   <div class="alert alert-danger">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       <%= devise_error_messages! %>
     </div>
 
+    <% end %>
+<div class="row">
+<div class="col-sm-4"></div>
+<div class="col-sm-4">
 <div class="ibox-content">
+<h2 class="text-center">Sign up</h2>
    <div class="field">
     <%= f.label :firstname %><br/>
-    <%= f.text_field :firstname, autofocus: true %>
+    <%= f.text_field :firstname, autofocus: true, required: true %>
   </div>
 
    <div class="field">
     <%= f.label :lastname %><br/>
-    <%= f.text_field :lastname %>
+    <%= f.text_field :lastname, required: true %>
   </div>
 
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email, required: true %>
   </div>
 
   <div class="field">
@@ -31,24 +36,24 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", required: true %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
   </div>
 
   <div class="field">
     <%= f.label :mobile %><br />
-    <%= f.text_field :mobile, autofocus: true %>
+    <%= f.text_field :mobile, required: true %>
   </div>
 
    <div class="field">
     <%= f.label :district %><br />
-    <%= f.text_field :district %>
+    <%= f.text_field :district, required: true %>
   </div>
-
+<br>
   <div class="actions">
 
     <%= f.submit "Sign up", :class => "btn btn-primary m-b" %>
@@ -56,5 +61,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
 </div>
 </div>
