--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -1,30 +1,33 @@
+
 <div class="container-fluid">
-
-          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      <!-- 728*90 -->
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:728px;height:90px"
-           data-ad-client="ca-pub-4211720830189288"
-           data-ad-slot="9899296254"></ins>
-      <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-
+    <div class="row text-center">
+           <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- school9edu_main_Blog1_1x1_as -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7665698555914778"
+                 data-ad-slot="9074553645"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+</div>
 
 
 
 <div class="row">
 	
 <div class="col-sm-3 text-center">
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- 300*600 -->
-    <ins class="adsbygoogle"
-         style="display:inline-block;width:300px;height:600px"
-         data-ad-client="ca-pub-4211720830189288"
-         data-ad-slot="8422563053"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+            <!-- school9edu_main_Blog1_1x1_as -->
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-7665698555914778"
+                 data-ad-slot="9074553645"
+                 data-ad-format="auto"></ins>
+            <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
 </div>
 
 	<div class="col-md-6">
@@ -51,17 +54,19 @@
       </div>
     </div>
 
-	<!-- INSERT ADD HERE -->
-			
-<!-- fit -->
-<ins class="adsbygoogle adslot_1"
-     style="display:block"
-     data-ad-client="ca-pub-4211720830189288"
-     data-ad-slot="5329495850"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+      <!-- START ADD HERE -->
+      <!-- fit -->
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- Responsive Links -->
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-7665698555914778"
+           data-ad-slot="8409268847"
+           data-ad-format="link"></ins>
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+      <!-- END ADD HERE -->
 
 
 
