--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE >
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>OnlineExam</title>
+  <title>ONLINE EXAMINATION PORTAL</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="/assets/bootstrap.min.css" rel="stylesheet" type="text/css" />
   
-  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
-  <meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
-  <meta http-equiv="pragma" content="no-cache">
 </head>
 <body class="gray-bg  pace-done">
 
@@ -24,18 +17,9 @@
 <% else %>
 <%= render :partial => 'layouts/navbar2' %>
 <%end%>
-<!-- <div class="container"> -->
 
 <%= yield %>
-<!-- <%= render :partial => 'layouts/footer' %> -->
 
-<!-- </div> -->
-
-
-
-
-
-<!-- <footer class="text-center">Copyright &copy; <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank">Khalidh</a> </footer> -->
 <br><br><br>
 <footer class="text-center footer navbar-fixed-bottom">
   <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
