--- a/app/views/exam/ecetresults.html.erb
+++ b/app/views/exam/ecetresults.html.erb
@@ -7,6 +7,19 @@
 <% i = 1 %>
 <% j = 0 %>
 <div class="container">
+			<div class="row text-center">
+					  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			              <!-- school9edu_main_Blog1_1x1_as -->
+			              <ins class="adsbygoogle"
+			                   style="display:block"
+			                   data-ad-client="ca-pub-7665698555914778"
+			                   data-ad-slot="9074553645"
+			                   data-ad-format="auto"></ins>
+			              <script>
+			              (adsbygoogle = window.adsbygoogle || []).push({});
+			              </script>
+
+			 </div>
 	<table class="table table-bordered">
 		<tr class="text-center">
 			<th>Question</th>
@@ -35,13 +48,17 @@
 				<% ad+=ad2 %>
 				<tr class="text-center">
 				<td colspan="3">
-					 <script ></script>
-                            <ins class="adsbygoogle"
-                                 style="display:inline-block;width:728px;height:90px"
-                                 </ins>
-                            <script>
-                            (adsbygoogle = window.adsbygoogle || []).push({});
-                            </script>
+					 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- Responsive Links -->
+						<ins class="adsbygoogle"
+						     style="display:block"
+						     data-ad-client="ca-pub-7665698555914778"
+						     data-ad-slot="8409268847"
+						     data-ad-format="link"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+
                    </td> 
                    
                 </tr>
@@ -52,10 +69,25 @@
 			<% end %>
 	</table>
 
-	<div class="row text-center">
-		<div class="col-md-6">
-		Total Questions Attempt = <%= @ecetresults.count %>
-		Your Correct Answer = <%= j %>
-		</div>
+	<div class="row text-center panel">
+		<!-- <div class="col-md-6"> -->
+		<b><p class="text-danger">Total Questions Attempt = <%= @ecetresults.count %></p>
+		<p class="text-success">Your Correct Answer = <%= j %></p></b>
+		<!-- </div> -->
 	</div>
+
+	<div class="row text-center">
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<!-- school9edu_main_Blog1_1x1_as -->
+		<ins class="adsbygoogle"
+		    style="display:block"
+			data-ad-client="ca-pub-7665698555914778"
+			data-ad-slot="9074553645"
+			data-ad-format="auto"></ins>
+			<script>
+			   (adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
+
+	</div>
+
 </div>
