--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,46 +26,46 @@
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
     </div>
-
+<br>
     <div class="row"> 
-      <div class="col-md-2">
-            <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <!-- <div class="col-md-2"> -->
+            <!-- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
             <!-- school9edu_main_Blog1_1x1_as -->
-            <ins class="adsbygoogle"
-                 style="display:block"
+            <!-- <ins class="adsbygoogle" -->
+               <!--   style="display:block"
                  data-ad-client="ca-pub-7665698555914778"
                  data-ad-slot="9074553645"
-                 data-ad-format="auto"></ins>
-            <script>
+                 data-ad-format="auto"></ins> -->
+            <!-- <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-      </div>
+      </div> -->
 
-      <div class="col-md-8 text-justify">
+      <div class="text-justify text-success">
 
           <p> Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P. </p>
 
             <p>Telangana State Engineering Common Entrance Test TSECET- 2017 will be conducted through computer based Test by JNTUH, Hyderabad on behalf of Telangana State Council of Higher Education (TSCHE). TSECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in T.S. </p>
 
+<br><br>
+  <div class="text-center">
+     <a href="/ecetsubjects"><button class="btn btn-success text-center">Ecet Exam </button> </a>
+  </div>
+        <br><br>
 
-  
-     <a href="/ecetsubjects"><button class="btn btn-success">Ecet Exam </button> </a>
-  
-    
-         <div class="footer-bottom">
             <p>SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.........) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).
             
-            Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.
+            Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.</p>
 
-            Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…….Do hard work, Practice and get Success.
+            <b class="text-danger"> Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…… Do hard work, Practice and get Success.</b>
+            <br><br>
+             <div class="text-center text-success"><b> *********SBTET WORLD WISHING YOU ALL THE BEST********</b></div>
+        
 
-              *********SBTET WORLD WISHING YOU ALL THE BEST********</p>
-        </div>
-
-     <div class="col-md-2">
-       <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     <!-- <div class="col-md-2"> -->
+       <!-- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
             <!-- school9edu_main_Blog1_1x1_as -->
-            <ins class="adsbygoogle"
+            <!-- <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-7665698555914778"
                  data-ad-slot="9074553645"
@@ -73,7 +73,7 @@
             <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-     </div>
+     </div> -->
 
      </div>
   <!-- </div> -->
