--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,6 @@
-  <style>
-
-    #mouseover{
-    a:hover {
-        background-color: lightblue!important;
-        /*border-radius: 20px;*/
-    }
-  }    
+  <style>  
     ins.adsbygoogle { background: transparent !important; }
-    
-</style>
+  </style>
 
 
 
@@ -24,7 +16,7 @@
     
 
 
-    <ul class="nav navbar-nav navbar-right" id="mouseover">
+    <ul class="nav navbar-nav navbar-right">
      <li>  <%= link_to('My Account', edit_user_registration_path, :class => "glyphicon") %></li>
      <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
      
