--- a/app/views/layouts/_navbar2.html.erb
+++ b/app/views/layouts/_navbar2.html.erb
@@ -1,13 +1,3 @@
-  <style>
-
-    #mouseover{
-    a:hover {
-        background-color: lightblue!important;
-        border-radius: 20px;
-    }
-  }
-</style>
-
 <nav class="navbar navbar-default white-bg">
   <div class="container-fluid">
   <div class="col-md-4">
@@ -19,7 +9,7 @@
     </div> -->
     
       
-    <ul class="nav navbar-nav navbar-right" id="mouseover">
+    <ul class="nav navbar-nav navbar-right">
      <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
      
