--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,9 @@
             </script>
     </div>
 <br>
-    <div class="row"> 
+    <div class="row text-center"> 
+
+    <h1>WELCOME TO SBTET ONLINE PORTAL </h1>
       <!-- <div class="col-md-2"> -->
             <!-- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
             <!-- school9edu_main_Blog1_1x1_as -->
@@ -41,7 +43,7 @@
             </script>
       </div> -->
 
-      <div class="text-justify text-success">
+      <div class=" text-success">
 
           <p> Andhra Pradesh Engineering Common Entrance Test APECET- 2017 will be conducted through computer based Test by JNTUA, Ananthapuramu on behalf of Andhra Pradesh State Council of Higher Education (APSCHE). APECET- 2017 will be conducted every year for Diploma Holders of Engineering Technology/ Pharmacy and B.Sc. Graduates (with Mathematics) for admission through lateral entry at 2nd year level into B.E./ B.Tech./ B.Pharmacy Programmes offered in Universities and AICTE/PCI approved Institutions in A.P. </p>
 
@@ -49,19 +51,22 @@
 
 <br><br>
   <div class="text-center">
-     <a href="/ecetsubjects"><button class="btn btn-success text-center">Ecet Exam </button> </a>
+     <a href="/ecetsubjects"><button class="btn btn-success text-center">Start Ecet Exam </button> </a>
+  </div>
   </div>
         <br><br>
-
+        <div class="text-info">
             <p>SBTET WORLD is one of the most leading and famous website in Diploma Fast Updates in India. The website which was providing Various data regarding technical courses who are pursing in technical courses (Latest information of Technical Boards or Universities  like: Examination Notification, Results, Previous Question papers, Examination fee Structures, Time schedules, Cet Exams Jobs and may more.........) Since from past 2 years. Now SBTET WORLD is going to provide Online based Mock Practice Examinations that who are going to appear in ECET/Any B.Tech level Engineering entrance based examinations and also useful for Private/Public Sector Examinations(Competitive Tests).
             
             Thank you for your continued support and for the confidence that all of you have placed in us. We would like to thank you all assuring our best services.</p>
+          </div>
+            <br>
 
-            <b class="text-danger"> Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…… Do hard work, Practice and get Success.</b>
-            <br><br>
-             <div class="text-center text-success"><b> *********SBTET WORLD WISHING YOU ALL THE BEST********</b></div>
+           <blockquote><b class="text-danger"> Note: This is only referral/Modal practices for entrance/competitive examinations. Do not depend only on this, this is only for practice purpose…… Do hard work, Practice and get Success.</b>
+            
+             <div class="text-center text-success"><b> ********* SBTET WORLD WISHING YOU ALL THE BEST ********</b></div>
         
-
+             </blockquote>
      <!-- <div class="col-md-2"> -->
        <!-- <script async sr="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
             <!-- school9edu_main_Blog1_1x1_as -->
